--- a/templates/user/goodbye.html.twig
+++ b/templates/user/goodbye.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Conta eliminada com sucesso{% endblock %}
+{% block title %}
+    {{ 'account_deleted.title'|trans }}
+{% endblock %}
 
 {% block body %}
     <div class="container mt-5">
@@ -8,14 +10,17 @@
             <div class="col-md-8 text-center">
                 <div class="card shadow-lg border-0">
                     <div class="card-body p-5">
-                        <h1 class="card-title text-success mb-4">A sua conta foi eliminada</h1>
+                        <h1 class="card-title text-success mb-4">
+                            {{ 'account_deleted.heading'|trans }}
+                        </h1>
+
                         <p class="card-text fs-5">
-                            A sua conta foi removida com sucesso da nossa plataforma.<br>
-                            Obrigado pela sua confiança em nós.
+                            {{ 'account_deleted.message'|trans|raw }}
                         </p>
 
-                        <a href="{{ path('app_home_page') }}" class="btn btn-outline-primary mt-4">
-                            Voltar à página inicial
+                        <a href="{{ path('app_home_page') }}"
+                           class="btn btn-outline-primary mt-4">
+                            {{ 'account_deleted.back_home'|trans }}
                         </a>
                     </div>
                 </div>
