--- a/public/css/header.css
+++ b/public/css/header.css
@@ -187,3 +187,10 @@ label {
 a {
 	text-decoration: none;
 }
+
+.show-above {
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    margin-bottom: 0.5rem; /* espace entre le bouton et le menu */
+}
