--- a/templates/layout/slideShow.html.twig
+++ b/templates/layout/slideShow.html.twig
@@ -1,35 +1,60 @@
-
 {% block body %}
-{# css #}
-<!-- <link rel="stylesheet" href={{asset("css/register.css")}}> -->
 
+{# Carousel Bootstrap #}
+<div id="carouselExampleIndicators"
+     class="carousel slide"
+     data-bs-ride="carousel"
+     aria-label="{{ 'carousel.label'|trans }}">
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="/public/image/backg/slideShow/products1.jpg" alt="First slide">
+    {# Indicateurs #}
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                class="active" aria-current="true"
+                aria-label="{{ 'carousel.slide'|trans }} 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="{{ 'carousel.slide'|trans }} 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="{{ 'carousel.slide'|trans }} 3"></button>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/public/image/backg/slideShow/products2.jpg" alt="Second slide">
+
+    {# Slides #}
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="{{ asset('image/backg/slideShow/products1.jpg') }}"
+                 class="d-block w-100"
+                 alt="{{ 'carousel.image_products'|trans }}">
+        </div>
+
+        <div class="carousel-item">
+            <img src="{{ asset('image/backg/slideShow/products2.jpg') }}"
+                 class="d-block w-100"
+                 alt="{{ 'carousel.image_delivery'|trans }}">
+        </div>
+
+        <div class="carousel-item">
+            <img src="{{ asset('image/backg/slideShow/products3.jpg') }}"
+                 class="d-block w-100"
+                 alt="{{ 'carousel.image_quality'|trans }}">
+        </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/public/image/backg/slideShow/products2.jpg" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+
+    {# Contrôles #}
+    <button class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">{{ 'carousel.previous'|trans }}</span>
+    </button>
+
+    <button class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">{{ 'carousel.next'|trans }}</span>
+    </button>
+
 </div>
-
 
 {% endblock %}
